[tool.poetry]
name = "kanecutter"
version = "0.1.0"
description = ""
authors = ["Kane Tu <kanetu731@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.0"
scapy = "^2.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
